--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  background-color: var(--cor1);
+  background-color: var(--cor0);
   line-height: 10vh;
   max-height: 10vh;
 
@@ -34,6 +34,7 @@ header{
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1;
 }
 header h1{
   font-family: 'padaria','Times New Roman', Times, serif;
@@ -226,6 +227,7 @@ header nav{
 footer{
   padding: 10px;
   background-image: url(img/img-footer.jpg);
+  background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
 }
@@ -234,7 +236,7 @@ footer > h2{
   font-size: 40px;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.5vh;
 }
 #contatos{
   display: flex;
@@ -244,7 +246,7 @@ footer > h2{
   display: flex;
   flex-direction: column;
   align-items: left;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .item-menu-footer img{
   width: 34px;
